k8s/ai-symptom-checker-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\USER\Desktop\healthcare-microservices\services\kompose.exe convert -f docker-compose.yml -o k8s/
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: ai-symptom-checker-service
  name: ai-symptom-checker-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ai-symptom-checker-service
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\USER\Desktop\healthcare-microservices\services\kompose.exe convert -f docker-compose.yml -o k8s/
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/services-healthcare-net: "true"
        io.kompose.service: ai-symptom-checker-service
    spec:
      containers:
        - env:
            - name: ANTHROPIC_API_KEY
            - name: MONGO_URI
              value: mongodb://mongo-ai:27017/ai-symptom-db
            - name: PORT
              value: "3005"
          image: services-ai-symptom-checker-service:latest
          imagePullPolicy: IfNotPresent
          name: ai-symptom-checker-service
      restartPolicy: Always
