k8s/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\USER\Desktop\healthcare-microservices\services\kompose.exe convert -f docker-compose.yml -o k8s/
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-gateway
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\USER\Desktop\healthcare-microservices\services\kompose.exe convert -f docker-compose.yml -o k8s/
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/services-healthcare-net: "true"
        io.kompose.service: api-gateway
    spec:
      containers:
        - env:
            - name: AI_SYMPTOM_CHECKER_SERVICE_URL
              value: http://ai-symptom-checker-service:3005
            - name: APPOINTMENT_VIDEO_SERVICE_URL
              value: http://appointment-video-service:3003
            - name: CLINICAL_MEDICAL_SERVICE_URL
              value: http://clinical-medical-service:3002
            - name: JWT_SECRET
              value: supersecretkey_change_in_prod
            - name: PORT
              value: "3000"
            - name: TRANSACTION_NOTIFY_SERVICE_URL
              value: http://transaction-notify-service:3004
            - name: USER_IDENTITY_SERVICE_URL
              value: http://user-identity-service:3001
          image: services-api-gateway:latest
          imagePullPolicy: IfNotPresent
          name: api-gateway
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
      restartPolicy: Always
