k8s/mongo-transaction-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\USER\Desktop\healthcare-microservices\services\kompose.exe convert -f docker-compose.yml -o k8s/
    kompose.version: 1.32.0 (765fde254)
  labels:
    io.kompose.service: mongo-transaction
  name: mongo-transaction
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo-transaction
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\USER\Desktop\healthcare-microservices\services\kompose.exe convert -f docker-compose.yml -o k8s/
        kompose.version: 1.32.0 (765fde254)
      labels:
        io.kompose.network/services-healthcare-net: "true"
        io.kompose.service: mongo-transaction
    spec:
      containers:
        - image: mongo:7
          name: mongo-transaction
          volumeMounts:
            - mountPath: /data/db
              name: mongo-transaction-data
      restartPolicy: Always
      volumes:
        - name: mongo-transaction-data
          persistentVolumeClaim:
            claimName: mongo-transaction-data
