k8s/ai-symptom-checker-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-symptom-checker-service
  
  labels:
    io.kompose.service: ai-symptom-checker-service
spec:
  selector:
    io.kompose.service: ai-symptom-checker-service
  ports:
    - port: 3005
      targetPort: 3005
