k8s/appointment-video-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: appointment-video-service
  namespace: healthcare
  labels:
    io.kompose.service: appointment-video-service
spec:
  selector:
    io.kompose.service: appointment-video-service
  ports:
    - port: 3003
      targetPort: 3003
