k8s/clinical-medical-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clinical-medical-service
  namespace: healthcare
  labels:
    io.kompose.service: clinical-medical-service
spec:
  selector:
    io.kompose.service: clinical-medical-service
  ports:
    - port: 3002
      targetPort: 3002
