k8s/mongo-appointment-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-appointment
  
  labels:
    io.kompose.service: mongo-appointment
spec:
  selector:
    io.kompose.service: mongo-appointment
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
