k8s/mongo-clinical-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-clinical
  
  labels:
    io.kompose.service: mongo-clinical
spec:
  selector:
    io.kompose.service: mongo-clinical
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
