k8s/mongo-transaction-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-transaction
  namespace: healthcare
  labels:
    io.kompose.service: mongo-transaction
spec:
  selector:
    io.kompose.service: mongo-transaction
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
