k8s/mongo-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-user
  namespace: healthcare
  labels:
    io.kompose.service: mongo-user
spec:
  selector:
    io.kompose.service: mongo-user
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
