k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: healthiest-app
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: backend
  sessionAffinity: None

---
apiVersion: v1
kind: Service
metadata:
  name: backend-loadbalancer
  namespace: healthiest-app
  labels:
    app: backend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: backend
