k8s/transaction-notify-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-notify-service
  namespace: healthcare
  labels:
    io.kompose.service: transaction-notify-service
spec:
  selector:
    io.kompose.service: transaction-notify-service
  ports:
    - port: 3004
      targetPort: 3004
