k8s/user-identity-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-identity-service
  namespace: healthcare
  labels:
    io.kompose.service: user-identity-service
spec:
  selector:
    io.kompose.service: user-identity-service
  ports:
    - port: 3001
      targetPort: 3001
